# claude-game

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SPEC-REVIEW.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
public/assets/: CREDITS.md
scripts/: check-rust.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/audio/: AudioManager.ts
src/config/: balance.ts  constants.ts  controls.ts  gameConfig.ts
src/core/: EventBus.ts  RandomService.ts  ServiceLocator.ts  events.ts
src/data/: crops.ts  dialogues.ts  festivals.ts  fish.ts  items.ts  monsters.ts  npcs.ts  shops.ts
src/entities/: Player.ts
src/save/: GameState.ts  SaveStorage.ts  SaveSystem.ts  TauriFsStorage.ts  schema.ts  storageFactory.ts
src/scenes/: BeachScene.ts  FarmScene.ts  FarmView.ts  MainMenuScene.ts  MineScene.ts  PreloadScene.ts  TownFestivalScene.ts  TownScene.ts  UIScene.ts  WorldScene.ts
src/systems/: CombatSystem.ts  CropSystem.ts  DialogSystem.ts  EconomySystem.ts  EnergySystem.ts  FarmSystem.ts  FestivalSystem.ts  FishingSystem.ts  InteractionSystem.ts  InventorySystem.ts  (+10 more)
tests/: cropSystem.test.ts  economySystem.test.ts  eventBus.test.ts  festival.test.ts  fishing.test.ts  grid.test.ts  inventorySystem.test.ts  m1Integration.test.ts  miningCombat.test.ts  newGame.test.ts  random.test.ts  relationshipSystem.test.ts  saveStorage.test.ts  saveSystem.test.ts  settings.test.ts  timeSystem.test.ts  toolSystem.test.ts
(+14 files in other folders)
