[package]
name = "claude-game"
version = "0.0.0"
description = "星露谷物语类游戏（占位）"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
